feat: 2023 day one!

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,31 +13,30 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_3=-565
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://2021/01/input.txt")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/ocean/", "res://assets/ocean/warped/", "res://assets/ocean/warped/night/", "res://2021/", "res://2021/01/")
+dock_filesystem_selected_paths=PackedStringArray("res://2023/01/Document.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Util/", "res://assets/ocean/", "res://assets/ocean/warped/", "res://assets/ocean/warped/night/", "res://assets/elf/", "res://2023/", "res://2023/01/", "res://2021/01/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://2021/01/01.tscn")
+open_scenes=PackedStringArray("res://2021/01/01.tscn", "res://2023/01/p1.tscn")
 center_split_offset=-572
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://2021/01/01.tscn"
-selected_bottom_panel_item=1
+current_scene="res://2023/01/p1.tscn"
 
 [ScriptEditor]
 
-open_scripts=["res://2021/01/Counter.gd", "res://2021/01/Floor.gd", "res://2021/01/input.txt", "res://2021/01/Sub.gd"]
-selected_script="res://2021/01/Counter.gd"
+open_scripts=["res://2021/01/Counter.gd", "res://2023/01/Document.gd", "res://2023/01/Elf.gd", "res://2021/01/Floor.gd", "res://2021/01/input.txt", "res://2023/01/input.txt", "res://Util/Santa.gd", "res://2021/01/Sub.gd", "res://2023/01/test.txt"]
+selected_script="res://2023/01/Document.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
