--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
-"scroll_position": 30.0,
-"selection": false,
+"row": 21,
+"scroll_position": 12.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 21,
+"selection_to_column": 33,
+"selection_to_line": 26,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,7 +25,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
-"scroll_position": 10.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -48,8 +52,78 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
+}
+
+[res://2023/01/input.txt]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1000,
+"scroll_position": 981.0,
+"selection": false,
+"syntax_highlighter": "Plain Text"
+}
+
+[res://2023/01/Document.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 54,
+"scroll_position": 19.5,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://2023/01/Elf.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 8,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 16,
+"scroll_position": 4.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Util/Santa.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 4.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://2023/01/test.txt]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 13,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Plain Text"
 }
